@@ -1,93 +1,56 @@
 #!/usr/bin/groovy
-import io.fabric8.Fabric8Commands
-import io.fabric8.Utils
 
 def call(Map parameters = [:], body) {
-    def flow = new Fabric8Commands()
-    def utils = new Utils()
 
-    def defaultLabel = buildId('maven')
+    def defaultLabel = "maven.${env.JOB_NAME}.${env.BUILD_NUMBER}".replace('-', '_').replace('/', '_')
     def label = parameters.get('label', defaultLabel)
 
-    def mavenImage = parameters.get('mavenImage', 'fabric8/maven-builder:v9ff62e0')
-    def jnlpImage = (flow.isOpenShift()) ? 'fabric8/jenkins-slave-base-centos7:vb0268ae' : 'jenkinsci/jnlp-slave:2.62'
+    def mavenImage = parameters.get('mavenImage', 'fabric8/maven-builder:2.2.297')
+    def clientsImage = parameters.get('clientsImage', 'fabric8/builder-clients:0.1')
     def inheritFrom = parameters.get('inheritFrom', 'base')
 
+    def flow = new io.fabric8.Fabric8Commands()
 
-    def cloud = flow.getCloudConfig()
-
-    def javaOptions = parameters.get('javaOptions', '-Duser.home=/root/ -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dsun.zip.disableMemoryMapping=true -XX:+UseParallelGC -XX:MinHeapFreeRatio=5 -XX:MaxHeapFreeRatio=10 -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Xms10m -Xmx192m')
-
-    if (utils.isUseOpenShiftS2IForBuilds()) {
-        def mavenOpts = parameters.get('mavenOpts', '-Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn')
-
-        podTemplate(cloud: cloud, label: label, inheritFrom: "${inheritFrom}", serviceAccount: 'jenkins',
+    if (flow.isOpenShift()) {
+        podTemplate(label: label, inheritFrom: "${inheritFrom}",
                 containers: [
-                        containerTemplate(
-                                name: 'jnlp',
-                                image: "${jnlpImage}",
-                                args: '${computer.jnlpmac} ${computer.name}',
-                                workingDir: '/home/jenkins/',
-                                resourceLimitMemory: '256Mi'),
-                        containerTemplate(
-                                name: 'maven',
-                                image: "${mavenImage}",
-                                command: '/bin/sh -c',
-                                args: 'cat',
-                                ttyEnabled: true,
-                                workingDir: '/home/jenkins/',
-                                envVars: [
-                                        envVar(key: '_JAVA_OPTIONS', value: javaOptions),
-                                        envVar(key: 'MAVEN_OPTS', value: mavenOpts)
-                                ],
-                                resourceLimitMemory: '640Mi')],
-                volumes: [
-                        secretVolume(secretName: 'jenkins-maven-settings', mountPath: '/root/.m2'),
-                        secretVolume(secretName: 'jenkins-release-gpg', mountPath: '/home/jenkins/.gnupg-ro'),
-                        secretVolume(secretName: 'jenkins-hub-api-token', mountPath: '/home/jenkins/.apitoken'),
-                        secretVolume(secretName: 'jenkins-ssh-config', mountPath: '/root/.ssh-ro'),
-                        secretVolume(secretName: 'jenkins-git-ssh', mountPath: '/root/.ssh-git-ro')]) {
+                        [name: 'maven', image: "${mavenImage}", command: 'cat', ttyEnabled: true,
+                         envVars: [
+                                 [key: 'MAVEN_OPTS', value: '-Duser.home=/root/']]],
+                        [name: 'clients', image: "${clientsImage}", command: 'cat', ttyEnabled: true]],
+                volumes: [secretVolume(secretName: 'jenkins-maven-settings', mountPath: '/root/.m2'),
+                          persistentVolumeClaim(claimName: 'jenkins-mvn-local-repo', mountPath: '/root/.mvnrepo'),
+                          secretVolume(secretName: 'jenkins-release-gpg', mountPath: '/home/jenkins/.gnupg'),
+                          secretVolume(secretName: 'jenkins-hub-api-token', mountPath: '/home/jenkins/.apitoken'),
+                          secretVolume(secretName: 'jenkins-ssh-config', mountPath: '/root/.ssh'),
+                          secretVolume(secretName: 'jenkins-git-ssh', mountPath: '/root/.ssh-git')]) {
 
             body(
 
             )
         }
     } else {
-        echo "building using the docker socket"
-
-        def mavenOpts = parameters.get('mavenOpts', '-Duser.home=/root/ -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn')
-
-        podTemplate(cloud: cloud,
-                label: label,
-                inheritFrom: "${inheritFrom}",
+        podTemplate(label: label, inheritFrom: "${inheritFrom}",
                 containers: [
-                        containerTemplate(
-                                //[name: 'jnlp', image: "${jnlpImage}", args: '${computer.jnlpmac} ${computer.name}'],
-                                name: 'maven',
-                                image: "${mavenImage}",
-                                command: '/bin/sh -c',
-                                args: 'cat',
-                                ttyEnabled: true,
-                                alwaysPullImage: false,
-                                workingDir: '/home/jenkins/',
-                                //resourceLimitMemory: '640Mi',
-                                envVars: [
-                                        envVar(key: '_JAVA_OPTIONS', value: javaOptions),
-                                        envVar(key: 'MAVEN_OPTS', value: mavenOpts),
-                                        envVar(key: 'DOCKER_CONFIG', value: '/home/jenkins/.docker/')])],
-                volumes: [
-                        secretVolume(secretName: 'jenkins-maven-settings', mountPath: '/root/.m2'),
-                        secretVolume(secretName: 'jenkins-docker-cfg', mountPath: '/home/jenkins/.docker'),
-                        secretVolume(secretName: 'jenkins-release-gpg', mountPath: '/home/jenkins/.gnupg-ro'),
-                        secretVolume(secretName: 'jenkins-hub-api-token', mountPath: '/home/jenkins/.apitoken'),
-                        secretVolume(secretName: 'jenkins-ssh-config', mountPath: '/root/.ssh-ro'),
-                        secretVolume(secretName: 'jenkins-git-ssh', mountPath: '/root/.ssh-git-ro'),
-                        hostPathVolume(hostPath: '/var/run/docker.sock', mountPath: '/var/run/docker.sock')])
-                {
+                        [name: 'maven', image: "${mavenImage}", command: 'cat', ttyEnabled: true,
+                         envVars: [
+                                 [key: 'MAVEN_OPTS', value: '-Duser.home=/root/']]],
+                        [name: 'clients', image: "${clientsImage}", command: 'cat', ttyEnabled: true, privileged: true]],
+                volumes: [secretVolume(secretName: 'jenkins-maven-settings', mountPath: '/root/.m2'),
+                          persistentVolumeClaim(claimName: 'jenkins-mvn-local-repo', mountPath: '/root/.mvnrepo'),
+                          secretVolume(secretName: 'jenkins-docker-cfg', mountPath: '/home/jenkins/.docker'),
+                          secretVolume(secretName: 'jenkins-release-gpg', mountPath: '/home/jenkins/.gnupg'),
+                          secretVolume(secretName: 'jenkins-hub-api-token', mountPath: '/home/jenkins/.apitoken'),
+                          secretVolume(secretName: 'jenkins-ssh-config', mountPath: '/root/.ssh'),
+                          secretVolume(secretName: 'jenkins-git-ssh', mountPath: '/root/.ssh-git'),
+                          hostPathVolume(hostPath: '/var/run/docker.sock', mountPath: '/var/run/docker.sock')],
+                envVars: [[key: 'DOCKER_HOST', value: 'unix:/var/run/docker.sock'], [key: 'DOCKER_CONFIG', value: '/home/jenkins/.docker/']]
+        ) {
 
-                    body(
+            body(
 
-                    )
-                }
+            )
+        }
     }
+
 }
